--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "files": ["dist"],
   "scripts": {
-    "build": "vue-cli-service build --target lib --name vue-component src/index.js"
+    "build": "vue-cli-service build --target lib --name vue-component src/index.js",
+    "watch": "npx chokidar \"src/**/*\" -c \"npm run build\""
   },
   "peerDependencies": {
     "vue": "^3.3.0",
-    "@vue/cli-service": "^5.0.0"
+    "@vue/cli-service": "^5.0.0",
+    "chokidar-cli": "^3.0.0"
   }
 }
